--- a/2/haproxy/haproxy.cfg
+++ b/2/haproxy/haproxy.cfg
@@ -45,8 +45,8 @@ frontend port8088  # секция фронтенд
         mode http
         bind :8088
         #default_backend web_servers
-	acl ACL_pywebserv.py hdr(host) -i example.com
-	use_backend web_servers if ACL_example.com
+	acl ACL_wserv.py hdr(host) -i wserv.py
+	use_backend web_servers if ACL_wserv.py
 
 backend web_servers    # секция бэкенд
         mode http
